# Instruments

./: ArtificialHorizon.qml  CMakeLists.txt  ILSIndicator.qml  InstrumentBackground.qml  LCDBackground.qml  LICENSE  MetalButton.qml  MiniPID.cpp  MiniPID.h  QmlComponents.qbs  README.md  ResettableKnob.qml  TickMark.qml  artificialhorizon.cpp  artificialhorizon.h  autopilot.cpp  autopilot.h  autopilotmapilayer.cpp  autopilotmaplayer.h  canvashelpers.js  horizontalsituationindicator.cpp  horizontalsituationindicator.h  linearindicator.cpp  linearindicator.h  main.cpp  main.qml  painterhelpers.cpp  painterhelpers.h  qml.qrc  qtquickcontrols2.conf
